--- a/Pages/Instituicao/registrarInstituicao.html
+++ b/Pages/Instituicao/registrarInstituicao.html
@@ -45,7 +45,7 @@
         </div>
         <div class="col-md-4 mb-3">
           <label for="validationCustom02">CPNJ</label>
-          <input type="text" class="form-control" id="cnpj" name="cnpj" placeholder="CPNJ" required>
+          <input type="number" class="form-control" id="cnpj" name="cnpj" placeholder="CPNJ" max="11" required>
           <div class="valid-feedback">
             Parece bom!
           </div>
@@ -75,7 +75,7 @@
             <div class="input-group-prepend">
               <span class="input-group-text" id="inputGroupPrepend">@</span>
             </div>
-            <input type="text" class="form-control" id="email" name="email" placeholder="E-mail"
+            <input type="email" class="form-control" id="email" name="email" placeholder="E-mail"
               aria-describedby="inputGroupPrepend" required>
             <div class="valid-feedback">
               Parece bom!
@@ -113,7 +113,7 @@
             <div class="input-group-prepend">
               <span class="input-group-text" id="inputGroupPrepend">CC</span>
             </div>
-            <input type="text" class="form-control" id="conta" name="conta" aria-describedby="inputGroupPrepend"
+            <input type="number" class="form-control" id="conta" name="conta" aria-describedby="inputGroupPrepend"
               required>
             <div class="valid-feedback">
               Parece bom!
@@ -142,7 +142,7 @@
 
         <div class="col-md-6 mb-3">
           <label for="senha">Digite uma senha</label>
-          <input type="text" class="form-control" id="senha" name="senha" placeholder="Senha" required>
+          <input type="password" class="form-control" id="senha" name="senha" placeholder="Senha" required>
           <div class="valid-feedback">
             Parece bom!
           </div>
@@ -152,7 +152,7 @@
         </div>
         <div class="col-md-6 mb-3">
           <label for="confirmaSenha">Confirme sua senha</label>
-          <input type="text" class="form-control" id="confirmaSenha" name="confirmaSenha"
+          <input type="password" class="form-control" id="confirmaSenha" name="confirmaSenha"
             placeholder="Confirme sua senha" required>
           <div class="valid-feedback">
             Parece bom!
