--- a/Pages/Aluno/indexAluno.html
+++ b/Pages/Aluno/indexAluno.html
@@ -26,7 +26,7 @@
 
   <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
 
-    <a class="navbar-brand mr-1" href="index.html">CrowFunding</a>
+    <a class="navbar-brand mr-1"">CrowFunding</a>
 
     <!-- <button class="btn btn-link btn-sm text-white order-1 order-sm-0" id="sidebarToggle" href="#">
       <i class="fas fa-bars"></i>
@@ -46,7 +46,6 @@
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
           <!-- <a class="dropdown-item" href="#">Meu dados</a>
           <div class="dropdown-divider"></div>-->
-          <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">Logout</a>
         </div>
       </li>
     </ul>
@@ -57,24 +56,34 @@
 
     <!-- Sidebar -->
     <ul class="sidebar navbar-nav">
-      <li class="nav-item active">
+      <li class="nav-item active" >
         <a class="nav-link" href="indexAluno.html">
           <i class="fas fa-fw fa-home"></i>
           <span>Inicio</span>
         </a>
       </li>
       <li class="nav-item">
+          <li class="nav-item active" >
         <a class="nav-link" href="meusCursos.html">
-          <i class="fas fa-fw fa-archive"></i>
+          <i class="fas fa-fw fa-list"></i>
           <span>Meus Cursos</span>
         </a>
       </li>
       <li class="nav-item">
+          <li class="nav-item active" >
           <a class="nav-link" href="cadastroCursoAluno.html">
-            <i class="fas fa-fw fa-list"></i>
-            <span>Matricular</span>
+              <i class="fas fa-sign-in-alt"></i>
+                  <span>Matricular</span>
           </a>
         </li>
+        <li class="nav-item">
+            <li class="nav-item active" >
+            <a href="../../index.html" class="nav-link"  onclick="encerrarSessao()">
+              <i class="fas fa-sign-out-alt"></i>
+              <span>sair</span>
+            </a>
+          </li>
+
     </ul>
 
     <div id="content-wrapper">
@@ -232,3 +241,38 @@
 </body>
 
 </html>
+
+<script>
+    // Example starter JavaScript for disabling form submissions if there are invalid fields
+    (function () {
+        'use strict';
+        window.addEventListener('load', function () {
+            // Fetch all the forms we want to apply custom Bootstrap validation styles to
+            var forms = document.getElementsByClassName('needs-validation');
+            // Loop over them and prevent submission
+            var validation = Array.prototype.filter.call(forms, function (form) {
+                form.addEventListener('submit', function (event) {
+                    if (form.checkValidity() === false) {
+                        event.preventDefault();
+                        event.stopPropagation();
+                    }
+                    form.classList.add('was-validated');
+                }, false);
+            });
+        }, false);
+    })();
+</script>
+
+
+<script>
+
+function encerrarSessao(){
+  sessionStorage.removeItem('aluno');
+
+}
+
+
+
+
+
+</script>
