--- a/Pages/Doador/pessoas.html
+++ b/Pages/Doador/pessoas.html
@@ -57,19 +57,22 @@
 
     <!-- Sidebar -->
     <ul class="sidebar navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="pessoas.html">
-          <i class="fas fa-fw fa-user"></i>
-          <span>Pessoas</span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="cursos.html">
-          <i class="fas fa-fw fa-list"></i>
-          <span>Cursos</span>
-        </a>
-      </li>
-    </ul>
+        <li class="nav-item active">
+          <a class="nav-link" href="pessoas.html">
+            <i class="fas fa-fw fa-list"></i>
+            <span>Lista de Pessoas</span>
+          </a>
+        </li>
+        <li class="nav-item active">
+            <a class="nav-link" href="../../index.html">
+              <i class="fas fa-sign-out-alt"></i>
+              <span>Sair</span>
+            </a>
+          </li>
+        
+
+
+      </ul>
 
     <div id="content-wrapper">
 
@@ -156,3 +159,9 @@
 </body>
 
 </html>
+
+
+
+
+
+
