--- a/Pages/Instituicao/indexInstituicao.html
+++ b/Pages/Instituicao/indexInstituicao.html
@@ -58,30 +58,39 @@
     <!-- Sidebar -->
     <ul class="sidebar navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="cursos.html">
+        <a class="nav-link" href="indexInstituicao.html">
           <i class="fas fa-fw fa-home"></i>
           <span>Inicio</span>
         </a>
       </li>
       <li class="nav-item">
+          <li class="nav-item active" >
         <a class="nav-link" href="cursos.html">
           <i class="fas fa-fw fa-archive"></i>
           <span>Cursos</span>
         </a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" href="index.html">
+          <li class="nav-item active" >
+          <a class="nav-link" href="alunos.html">
             <i class="fas fa-fw fa-list"></i>
             <span>Alunos</span>
           </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="index.html">
-              <i class="fas fa-fw fa-business-time"></i>
-              <span>Filiais</span>
+            <li class="nav-item active" >
+            <a class="nav-link" href="turmas.html">
+              <i class="fas fa-fw fa-list"></i>
+              <span>Turmas</span>
             </a>
           </li>
-
+        <li class="nav-item">
+            <li class="nav-item active" >
+            <a href="../../index.html" class="nav-link"  onclick="encerrarSessao()">
+              <i class="fas fa-sign-out-alt"></i>
+              <span>sair</span>
+            </a>
+          </li>
     </ul>
 
     <div id="content-wrapper">
@@ -163,3 +172,11 @@
 </body>
 
 </html>
+
+<script>
+function encerrarSessao(){
+  sessionStorage.removeItem('instituicao');
+
+}
+
+</script>
