--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </div>
             <div class="form-group">
               <div class="form-label-group">
-                <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="required" autofocus="autofocus">
+                <input type="email" id="inputEmail" class="form-control" placeholder="Email address"  autofocus="autofocus" required>
                 <label for="inputEmail">E-mail</label>
               </div>
             </div>
@@ -72,6 +72,7 @@
   </div>
 
   </div>
+  <div id="alert-credenciais-incorretas"></div>
 
 
 
@@ -98,7 +99,6 @@
   <!-- Bootstrap core JavaScript-->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="js/crowfunding/loginUsuario.js"></script>
   <!-- Core plugin JavaScript-->
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
@@ -155,7 +155,7 @@ function callInstituicao(url, data) {
   });
 
   request.fail(function(jqXHR, textStatus) {
-    console.log("Request failed: " + textStatus);
+    $('#alert-credenciais-incorretas').html(exibirAlertErroLogin);
   });
   };
 
@@ -178,10 +178,21 @@ function callInstituicao(url, data) {
     });
 
     request.fail(function(jqXHR, textStatus) {
-      console.log("Request failed: " + textStatus);
+      $('#alert-credenciais-incorretas').html(exibirAlertErroLogin);
     });
     };
 
 });
+
+
+function exibirAlertErroLogin(){
+  let alert =`<div class="alert alert-danger" role="alert">
+  Usuário ou senha incorretos
+  </div>`;
+return alert;
+}
+
+
+
 
 </script>
