--- a/Pages/Instituicao/cursos.html
+++ b/Pages/Instituicao/cursos.html
@@ -290,12 +290,13 @@ function modalEmenta(ementa){
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title"></h5>
+        <h5 class="modal-title">Ementa</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
+        <p class="center"></p>
         <p>${ementa}</p>
       </div>
       <div class="modal-footer">
@@ -316,33 +317,29 @@ jQuery(function ($) {
   
   let url = `http://localhost:8080/cursos/cursos_instituicao/${idInstituicao}`;
   let tabela = document.querySelector('#table-cursos');
-  let tr = document.createElement('tr');
 
   $.get(url, function (data) {
             
             data.forEach(function(d, index){
+              let tr = document.createElement('tr');
 
-                tr.innerHTML = `
+            tr.innerHTML = `
             <td hidden>${d.ementa}</td>
             <td>${d.nome}</td>
             <td>${d.valor}</td>
-            <td class="text-center"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#alert-ementa">
+            <td class="text-center">
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#alert-ementa">
             Visualizar
             </button>
             </td>`;
+            tabela.appendChild(tr);
           });
-
-
-          tabela.appendChild(tr);
 
           $('#dataTable').DataTable( {});
     });
 
 
-});
-
-$('#dataTable tbody').on( 'click','tr' ,function () {
-         
+    $('#dataTable tbody').on( 'click','tr' ,function () {
     var table = $('#dataTable').DataTable();
 
     let linhaSelecionada= table.row(this).index();
@@ -355,6 +352,10 @@ $('#dataTable tbody').on( 'click','tr' ,function () {
 
 });
 
+
+
+
+});
 
  $('#btnCadastrar').click(function () {
       event.preventDefault();
@@ -393,9 +394,6 @@ request.fail(function(jqXHR, textStatus) {
 
 });
 };
-
-
-
 
 </script>
 
