--- a/Pages/Aluno/cadastroCursoAluno.html
+++ b/Pages/Aluno/cadastroCursoAluno.html
@@ -89,20 +89,7 @@
               </li>
       </ul>
   
-      <div id="content-wrapper">
-  
-        <div class="container-fluid">
-        
-            <!-- Breadcrumbs-->
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item">
-                  <a href="indexAluno.html">Inicio</a>
-                </li>
-                <li class="breadcrumb-item active">
-                  <a href="#">cadastro curso</a>
-                </li>
-              </ol>
-        <!-- Fim Modal -->
+     
 
         <div id="content-wrapper">
 
@@ -119,14 +106,14 @@
                 </ol>
 
                 <div class="text-center">
-                    <h1 class="display-4">Cadastrar-se em um curso</h1>
+                    <h1 class="display-4">Matricular-se em um curso</h1>
                 </div>
 
                 <!-- Inicio Modal -->
                 <div class="card mb-3">
                     <div class="card-header">
                         <i class="fas fa-table"></i>
-                        Cursos Cadastrados
+                        Matricular em curso
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
