--- a/Pages/Instituicao/alunos.html
+++ b/Pages/Instituicao/alunos.html
@@ -406,13 +406,13 @@
             <div class="text-center">
             <p>
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#alert-perfil-aluno">
-                mais
+                Mais
             </button>
             </p>
             </div>
             </td>
             <button type="button" class="btn btn-primary" disabled>
-                Aprovar
+                Liberar
             </button>  
 
             <button type="button" class="btn btn-danger" disabled>
@@ -441,13 +441,13 @@
             <div class="text-center">
             <p>
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#alert-perfil-aluno">
-                exibir
-            </button>
+                Mais
+            </button>￼
             </p>
             </div>
             </td>
             <button type="button" onclick="aprovarAluno(${d.idAluno}, ${d.idTurma})" class="btn btn-primary">
-                Aprovar
+                Liberar
             </button>  
 
             <button type="button"  onclick="reprovarAluno(${d.idAluno}, ${d.idTurma})" class="btn btn-danger">
